--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -51,3 +51,10 @@
     font-family: "Open Sans" !important;
     font-size: 1.3rem;
 }
+
+.bs-bg-yellow{
+    background: #efcb3a;
+    padding: 3rem;
+}
+
+
