--- a/src/pages/Claim/style.css
+++ b/src/pages/Claim/style.css
@@ -1,17 +1,17 @@
-.bs-main-section{
+.bs-claim-main-section{
     height: 100vh;
     background-size: cover;
     position: relative !important;
 }
 
-.bs-left-img{
+.bs-claim-left-img{
     position: absolute;
     left: 0;
     top: 0;
     z-index: 0;
 }
 
-.bs-right-img{
+.bs-claim-right-img{
     transform: scaleX(-1) !important;
     position: absolute;
     right: 0;
@@ -19,23 +19,23 @@
     z-index: 0;
 }
 
-.bs-dashboard-container{
+.bs-claim-dashboard-container{
     position: absolute;
     width: 100%;
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
 
-.bs-dashboard-heading{
+.bs-claim-dashboard-heading{
     color: #003049;
 }
 
-.bs-dashboard-sub-heading{
+.bs-claim-dashboard-sub-heading{
     color: #6D1009;
     font-weight: 600;
 }
 
-.bs-btn-orange{
+.bs-claim-btn-orange{
     text-align: center;
     background: #F77F00 !important;
     font-weight: bold !important;
@@ -43,7 +43,7 @@
     font-size: 1.3rem;
 }
 
-.bs-btn-yellow{
+.bs-claim-btn-yellow{
     text-align: center;
     background: #FCBF49 !important;
     font-weight: bold !important;
@@ -51,10 +51,49 @@
     font-size: 1.3rem;
 }
 
-.bs-bg-yellow{
+.bs-claim-bg-yellow{
     background: #efcb3a;
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
 
 
+
+.bs-claim-circle-bg{
+    display: inline-block;
+    background: #EAE2B7;
+    padding: 1rem;
+    border-radius: 100px !important;
+    margin: 15px;
+}
+
+.bs-claim-img{
+    height: 4rem;
+    width: 4rem;
+}
+
+.bs-claim-card{
+    border-radius: 50px !important;
+}
+
+.bs-claim-card-img-top{
+    height: 17rem;
+    width: 100%;
+}
+
+.bs-claim-card-body{
+    background: #003049;
+    color: white
+}
+
+.bs-claim-wit-bg{
+    background: #6D1009;
+}
+
+.bs-claim-wit-color{
+    color: #6D1009;
+}
+
+.bs-claim-wit-bg h4{
+    color: white;
+}
