--- a/src/index.css
+++ b/src/index.css
@@ -4,31 +4,4 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: "#FFF8D4";
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-@font-face {
-  font-family: 'SimranITC';
-  src: url("./Assets/Fonts/SimranITC.otf") format("opentype");
-}
-
-.bs-font-SimranITC{
-  font-family: 'SimranITC' !important;
-}
-
-.bs-font-OpenSans{
-  font-family: 'Open Sans' !important;
-}
-
-.text-marum-color{
-  color: #6D1009 !important;
-}
+    '
